<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_nav_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the robot_nav project</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build and execution dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_localization</depend>

  <!-- ROS 2 control dependencies -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  
  <!-- Simulation dependencies -->
  <depend>gazebo_ros2_control</depend>
  <depend>gz_ros2_control</depend>
  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  
  <!-- Project dependencies -->
  <depend>robot_nav_description</depend>
  <depend>robot_nav_gazebo</depend>
  
  <!-- GUI dependencies -->
  <depend>joint_state_publisher_gui</depend>

  <!-- Runtime dependencies for message generation -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Interface package membership -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>